[tool.poetry]
name = "pelican"
version = "0.6.5"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pypfb = ">=0.5.21"
fastavro = "<=1.4.1"
requests = "^2.25.1"
psycopg2-binary = ">=2.8.4"
pyspark = "^3.0.1"
psutil = "^5.8.0"
boto3 = "^1.26.0"
gen3 = "^4.2.0"
psqlgraph = "3.0.1"
gen3datamodel = ">=3.2.1"
datamodelutils = ">=1.1.0"
dictionaryutils = "^3.4.1"
SQLAlchemy = ">=1.3,<2.0"
cdislogging = "^1.1.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.8.4"]
build-backend = "poetry.core.masonry.api"
