[tool.poetry]
name = "pelican"
version = "2.0.0"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]

[tool.poetry.dependencies]
python = ">=3.13, <4"
pypfb = ">=0.6.0,<1"
fastavro = ">=1,<2"
requests = "^2.25.1"
psycopg2-binary = ">=2.9.11"
pyspark = "^3.0.1"
psutil = "^5.8.0"
boto3 = "^1.38.31"
gen3 = "^4.2.0"
psqlgraph = "3.1.1"
gen3datamodel =  ">=4.0.0"
datamodelutils = ">=1.1.2, <2"
dictionaryutils = ">=4.0.0"
SQLAlchemy = ">=1.3.3,<2.0"
cdislogging = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "<9"

[build-system]
requires = ["poetry>=1.8.4"]
build-backend = "poetry.core.masonry.api"
